GET /statistics
